public-app/traefik/ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-https
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/custom-http-errors: "503,502"
    nginx.ingress.kubernetes.io/default-backend: error-page
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "16"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/configuration-snippet: |
     rewrite ^/admin https://admin-demo.virtocommerce.com break;
spec:
  tls:
    - hosts:
      - demo.virtocommerce.com
      - admin-demo.virtocommerce.com
      secretName: vc-wildcard
  rules:
  - host: demo.virtocommerce.com
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
  - host: admin-demo.virtocommerce.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
