public-app/traefik/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-http
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: prod-errorpage@kubernetescrd, $(VC_NAMESPACE)-$(VC_INSTANCE)-https-redirect@kubernetescrd, $(VC_NAMESPACE)-$(VC_INSTANCE)-rewrite@kubernetescrd, argocd-ratelimit@kubernetescrd
spec:
  rules:
  - host: demo.virtocommerce.com
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
  - host: admin-demo.virtocommerce.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
